fix: currentlyreading image too large in about

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -354,8 +354,8 @@ a.hover:hover {
     }
     
     .image {
-      width: 48px;
-      height: 48px;
+      width: 64px;
+      height: 64px;
     }
 
     .image-link {
